--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,44 @@
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_2960521_rqz39d8moo.css">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/topNav.css">
 
 </head>
+
 <body>
-  <!-- 测试css引入成功？ -->
-  <div class="container"> 
-    <div>safdgag</div>
-    <!-- 测试字体图标引入成功？？ -->
-    <i class="iconfont i-xinlang "></i>
+  <!-- 头部导航栏 -->
+  <div class="topNav">
+    <div class="container clearfix">
+      <!-- 左侧部分 -->
+      <ul class="fl topNav-menu">
+        <li class="fl"><a href="">小米商城</a></li>
+        <li class="fl"><a href="">MIUI</a></li>
+        <li class="fl"><a href="">IoT</a></li>
+        <li class="fl"><a href="">云服务</a></li>
+        <li class="fl"><a href="">天星数科</a></li>
+        <li class="fl"><a href="">有品</a></li>
+        <li class="fl"><a href="">小爱开放平台</a></li>
+        <li class="fl"><a href="">企业团购</a></li>
+        <li class="fl"><a href="">资质证照</a></li>
+        <li class="fl"><a href="">协议规则</a></li>
+        <li class="fl"><a href="">下载app</a></li>
+        <li class="fl"><a href="">智能生活</a></li>
+        <li class="fl"><a href="">Select Location</a></li>
+      </ul>
+      <!-- 右侧部分 -->
+      <div class="fr">
+        <!-- 登录注册通知部分 -->
+        <ul class="fl topNav-menu">
+          <li class="fl"><a href="">登录</a></li>
+          <li class="fl"><a href="">注册</a></li>
+          <li class="fl"><a href="">消息通知</a></li>
+        </ul>
+        <!-- 购物车部分 -->
+        <div class="fr"></div>
+      </div>
+    </div>
   </div>
- 
+
 </body>
+
 </html>
