03. 顶部导航-购物车

--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -42,7 +42,19 @@
           <li class="fl"><a href="">消息通知</a></li>
         </ul>
         <!-- 购物车部分 -->
-        <div class="fr"></div>
+        <div class="fl topNav-car">
+          <!-- 购物车图标部分 -->
+          <a href="" class="topNav-link">
+            <i class="iconfont i-car"></i>
+            <span>购物车(0)</span>
+          </a>
+          <!-- 鼠标hover时，显示的部分 -->
+          <div class="topNav-detail">
+            <span>购物车中还没有商品，赶紧选购吧！</span>
+          </div>
+
+
+        </div>
       </div>
     </div>
   </div>
