04 头部 Logo和菜单

--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -10,11 +10,12 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/topNav.css">
+  <link rel="stylesheet" href="css/header.css">
 
 </head>
 
 <body>
-  <!-- 头部导航栏 -->
+  <!-- 头部导航栏开始 -->
   <div class="topNav">
     <div class="container clearfix">
       <!-- 左侧部分 -->
@@ -58,7 +59,31 @@
       </div>
     </div>
   </div>
+  <!-- 头部导航栏结束 -->
 
+  <!-- 头部菜单开始 -->
+  <div class=" header">
+    <div class="container clearfix">
+      <!-- logo -->
+      <a href="" class="header-logo fl">
+        <h1>小米商城</h1>
+      </a>
+      <!-- 菜单 -->
+      <div class="header-menu fl">
+        <a class="fl" href="">小米手机</a>
+        <a class="fl" href="">红米手机</a>
+        <a class="fl" href="">电视</a>
+        <a class="fl" href="">笔记本</a>
+        <a class="fl" href="">平板</a>
+        <a class="fl" href="">家电</a>
+        <a class="fl" href="">路由器</a>
+        <a class="fl" href="">服务</a>
+        <a class="fl" href="">社区</a>
+      </div>
+      <!-- 搜索 -->
+    </div>
+  </div>
+  <!-- 头部菜单结束 -->
 </body>
 
 </html>
