--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -79,6 +79,61 @@
         <a class="fl" href="">路由器</a>
         <a class="fl" href="">服务</a>
         <a class="fl" href="">社区</a>
+
+        <!-- 二级菜单区域 -->
+        <div class="header-submenu">
+          <div class="container clearfix">
+            <!-- 二级菜单 列表项 -->
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+            <a href="" class="fl">
+              <div class="cover">
+                <img src="./img/product.webp" alt="">
+                <div class="name">Redmi Note 11 5G</div>
+                <div class="price">1199元起</div>
+              </div>
+            </a>
+
+          </div>
+        </div>
       </div>
       <!-- 搜索 -->
     </div>
