07 横幅 主区域

--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/topNav.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/banner.css">
 
 </head>
 
@@ -153,6 +154,25 @@
     </div>
   </div>
   <!-- 头部菜单结束 -->
+
+   <!-- 横幅开始 -->
+   <div class="banner container">
+    <a href="" class="banner-cover">
+      <img src="./img/banner.jpeg" alt="">
+    </a>
+    <div class="banner-pointer banner-pointer-left">
+      <i class="iconfont i-left"></i>
+    </div>
+    <div class="banner-pointer banner-pointer-right">
+      <i class="iconfont i-right"></i>
+    </div>
+    <div class="banner-dots">
+      <span class="fl"></span>
+      <span class="fl selected"></span>
+      <span class="fl"></span>
+    </div>
+   </div>
+    <!-- 横幅结束 -->
 </body>
 
 </html>
