--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -171,8 +171,81 @@
       <span class="fl selected"></span>
       <span class="fl"></span>
     </div>
+
+    <!-- 横幅-菜单 -->
+    <ul class="banner-menu">
+
+      <li>
+        <div class="banner-menu-item clearfix">
+          <span class="fl">手机</span>
+          <i class="iconfont i-right fr"></i>
+        </div>
+        <div class="banner-sub-menu">
+          <a href="" class="fl">
+            <img src="./img/mobile.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/mobile.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/mobile.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/mobile.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/mobile.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+        </div>
+      </li>
+
+      <li>
+        <div class="banner-menu-item clearfix">
+          <span class="fl">电视</span>
+          <i class="iconfont i-right fr"></i>
+        </div>
+        <div class="banner-sub-menu">
+          <a href="" class="fl">
+            <img src="./img/tv.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/tv.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/tv.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/tv.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+          <a href="" class="fl">
+            <img src="./img/tv.webp" class="fl" alt="">
+            <span class="fl">Note 11 Pro 系列 Note 11 Pro 系列 Note 11 Pro 系列</span>
+          </a>
+
+        </div>
+      </li>
+    </ul>
    </div>
     <!-- 横幅结束 -->
+ 
 </body>
 
 </html>
