--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/topNav.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/banner.css">
+  <link rel="stylesheet" href="css/banner2.css">
 
 </head>
 
@@ -140,7 +141,7 @@
       <!-- 收集表单数据，使用form标签 -->
       <form class="header-search fr">
         <!-- 这里input标签不建议在包裹一层div,为了聚焦时，方便通过兄弟伪元素获取后面的元素 -->
-        <input  type="text" class="fl" placeholder="手机" >
+        <input type="text" class="fl" placeholder="手机">
         <button type="button" class="search-icon fl">
           <i class="iconfont i-fangdajing"></i>
         </button>
@@ -155,8 +156,8 @@
   </div>
   <!-- 头部菜单结束 -->
 
-   <!-- 横幅开始 -->
-   <div class="banner container">
+  <!-- 横幅开始 -->
+  <div class="banner container">
     <a href="" class="banner-cover">
       <img src="./img/banner.jpeg" alt="">
     </a>
@@ -243,9 +244,51 @@
         </div>
       </li>
     </ul>
-   </div>
-    <!-- 横幅结束 -->
- 
+  </div>
+  <!-- 横幅结束 -->
+
+  <!-- 横幅2开始 -->
+  <div class="banner2 container clearfix">
+    <div class="banner2-service fl">
+      <a href="" class="fl">
+        <i class="iconfont i-shijian"></i>
+        保障服务
+      </a>
+      <a href="" class="fl">
+        <i class="iconfont i-qiye"></i>
+        企业团购
+      </a>
+      <a href="" class="fl">
+        <i class="iconfont i-Fma"></i>
+        F码通道
+      </a>
+      <a href="" class="fl">
+        <i class="iconfont i-Sim-Card"></i>
+        米粉卡
+      </a>
+      <a href="" class="fl">
+        <i class="iconfont i-yijiuhuanxin"></i>
+        以旧换新
+      </a>
+      <a href="" class="fl">
+        <i class="iconfont i-chongzhi"></i>
+        话费充值
+      </a>
+    </div>
+    <a href="" class="fl">
+      <img src="./img/banner1.jpg" alt="">
+    </a>
+    <a href="" class="fl">
+      <img src="./img/banner2.jpg" alt="">
+    </a>
+    <a href="" class="fl">
+      <img src="./img/banner3.jpg" alt="">
+    </a>
+  </div>
+  <!-- 横幅2结束 -->
+
+
+
 </body>
 
 </html>
