10 主区域 广告

--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/banner.css">
   <link rel="stylesheet" href="css/banner2.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -287,7 +288,17 @@
   </div>
   <!-- 横幅2结束 -->
 
+  <!-- 主区域开始 -->
 
+  <div class="main">
+    <!-- banner3区域 -->
+    <a class="container banner3">
+      <img src="./img/full-banner.webp" alt="">
+    </a>
+
+  </div>
+
+  <!-- 主区域结束 -->
 
 </body>
 
