--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -296,6 +296,73 @@
       <img src="./img/full-banner.webp" alt="">
     </a>
 
+    <!-- 橱窗区域 -->
+    <div class="sc container">
+      <div class="sc-top clearfix">
+        <h2 class="sc-title fl">手机</h2>
+        <a href="" class="sc-more fr">
+          查看更多
+          <i class="iconfont i-right"></i>
+        </a>
+      </div>
+      <div class="sc-container clearfix">
+        <div class="sc-item-first fl">
+          <a href="">
+            <img src="./img/mobile-first.webp" alt="" />
+          </a>
+        </div>
+        <div class="sc-item-list fl">
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+          <a href="" class="sc-item fl">
+            <img src="./img/heisha.webp" alt="" />
+            <p class="sc-name">黑鲨4S Pro</p>
+            <p class="sc-desc">磁动力升降肩键</p>
+            <p class="sc-price">4799元起</p>
+          </a>
+        </div>
+      </div>
+
   </div>
 
   <!-- 主区域结束 -->
