--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/banner2.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/rm.css">
 
 </head>
 
@@ -451,6 +452,35 @@
     </div>
   </div>
   <!-- 页脚区域 结束 -->
+
+      <!-- 右侧固定菜单 开始 -->
+      <div class="rm">
+        <a href="" class="rm-item">
+          <i class="iconfont i-tel"></i>
+          <span class="rm-title">手机APP</span>
+        </a>
+        <a href="" class="rm-item">
+          <i class="iconfont i-yonghu"></i>
+          <span class="rm-title">个人中心</span>
+        </a>
+        <a href="" class="rm-item">
+          <i class="iconfont i-weixiu1"></i>
+          <span class="rm-title">售后服务</span>
+        </a>
+        <a href="" class="rm-item">
+          <i class="iconfont i-kefu"></i>
+          <span class="rm-title">人工客服</span>
+        </a>
+        <a href="" class="rm-item">
+          <i class="iconfont i-car"></i>
+          <span class="rm-title">购物车</span>
+        </a>
+        <a href="javascript:scrollTo(0,0)" class="rm-item rm-to-top">
+          <i class="iconfont i-dingbu"></i>
+          <span class="rm-title">回到顶部</span>
+        </a>
+      </div>
+      <!-- 右侧固定菜单 结束 -->
 
 </body>
 
