14 右侧二维码弹出

--- a/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/02 HTML+CSS项目实战/项目/index.html
@@ -458,6 +458,16 @@
         <a href="" class="rm-item">
           <i class="iconfont i-tel"></i>
           <span class="rm-title">手机APP</span>
+
+          <!-- 右侧二维码弹出 -->
+          <div class="rm-mention">
+            <img src="./img/qrcode.png" alt="" />
+            <p>
+              扫码领取新
+              <br />
+              人百元礼包
+            </p>
+          </div>
         </a>
         <a href="" class="rm-item">
           <i class="iconfont i-yonghu"></i>
