--- a/3. 前端高薪工程师/01. 技术提升/03 JS收官/24. WebAPI-DOM尺寸和位置/练习题解析/p2/index.html
+++ b/3. 前端高薪工程师/01. 技术提升/03 JS收官/24. WebAPI-DOM尺寸和位置/练习题解析/p2/index.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>自行运动的小球</title>
     <style>
+      *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
       .ball {
         width: 50px;
         height: 50px;
         background: #f40;
         border-radius: 50%;
         position: fixed;
-        left: 100px;
-        top: 50px;
+        left: 50%;
+        top: 50%;
       }
     </style>
   </head>
   <body>
-    <div class="ball"></div>
+    <div class="container">
+      <div class="ball"></div>
+    </div>
+    
 
     <script src="./js/index.js"></script>
   </body>
